--- a/public/views/cart.ejs
+++ b/public/views/cart.ejs
@@ -16,7 +16,7 @@
                         <th>Product</th>
                         <th>Price</th>
                         <th>Quantity</th>
-                        <th>total</th>
+                        <th>Total</th>
                         <th>&nbsp;</th>
                     </tr>
                     </thead>
@@ -77,7 +77,8 @@
                         <span id="total"><%= parseFloat(total).toFixed(2) %>  €</span>
                     </p>
                 </div>
-                <p class="text-center"><a href="/order" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
+                <p class="text-center"><a href="/order" class="btn btn-primary py-3 px-4">Order now</a></p>
+                <p class="text-center"><a href="/" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
             </div>
         </div>
     </div>
