last details, puslapiavimas, acc trinimas

--- a/public/views/_layouts/admin_layout.ejs
+++ b/public/views/_layouts/admin_layout.ejs
@@ -22,7 +22,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="/admin/" class="nav-link">All drinks</a></li>
-                <li class="nav-item"><a href="/admin/order" class="nav-link">Orders</a></li>
+                <li class="nav-item"><a href="/admin/order/1" class="nav-link">Orders</a></li>
                 <li class="nav-item"><a href="/admin/category" class="nav-link">Drinks Categories</a></li>
 	          <li class="nav-item"><a href="/admin/drink/" class="nav-link">Edit drinks</a></li>
                 <%- include('user_nav') %>
