--- a/public/views/authorization/register.ejs
+++ b/public/views/authorization/register.ejs
@@ -4,46 +4,52 @@
             <div class="col-xl-10 ftco-animate">
                 <form action="" method="POST" enctype="multipart/form-data" name="registrationForm">
                     <div class="row align-items-end">
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div class="form-group">
                                 <label for="name">First Name</label>
                                 <input type="text" name="name" class="form-control" maxlength="100">
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div class="form-group">
                                 <label for="Surname">Last Name</label>
                                 <input type="text" name="surname" class="form-control" maxlength="100">
                             </div>
                         </div>
-                        <div class="w-100"></div>
-                        <div class="col-md-8">
+                        <div class="col-md-5">
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" name="email" class="form-control" maxlength="100">
+                                <label for="birthday">Birthday</label>
+                                <input type="date" name="birthday" class="form-control">
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <div class="form-group">
                                 <label for="phone">Phone</label>
                                 <input type="text" name="phone" class="form-control" maxlength="100">
                             </div>
                         </div>
                         <div class="w-100"></div>
-                        <div class="col-md-12">
+                        <div class="col-md-10">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" class="form-control" maxlength="100">
+                            </div>
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="col-md-10">
                             <div class="form-group">
                                 <label for="address">Address</label>
                                 <input type="text" name="address" class="form-control" maxlength="100">
                             </div>
                         </div>
                         <div class="w-100"></div>
-                        <div class="col-md-12">
+                        <div class="col-md-10">
                             <div class="form-group">
                                 <label for="new_password">Password</label>
                                 <input type="password" name="new_password" class="form-control" maxlength="100">
                             </div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-md-10">
                             <div class="form-group">
                                 <label for="conf_password">Confirm Password</label>
                                 <input type="password" name="conf_password" class="form-control" maxlength="100">
