--- a/public/views/authorization/register.ejs
+++ b/public/views/authorization/register.ejs
@@ -7,52 +7,87 @@
                         <div class="col-md-5">
                             <div class="form-group">
                                 <label for="name">First Name</label>
-                                <input type="text" name="name" class="form-control" maxlength="100">
+                                <input type="text" name="name" class="form-control"
+                                       required maxlength="50" minlength="2" pattern="[A-ZĄČĘĖĮŠŲŪŽa-ząčęėįšųūž]{1,50}"
+                                       title="Only alphabetic letters allowed"
+                                >
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="form-group">
                                 <label for="Surname">Last Name</label>
-                                <input type="text" name="surname" class="form-control" maxlength="100">
+                                <input type="text" name="surname" class="form-control"
+                                       required maxlength="50" minlength="2" pattern="[A-ZĄČĘĖĮŠŲŪŽa-ząčęėįšųūž]{1,50}"
+                                       title="Only alphabetic letters allowed"
+                                >
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="form-group">
-                                <label for="birthday">Birthday</label>
-                                <input type="date" name="birthday" class="form-control">
+                                <label for="birthday"> Birthday
+                                    <span class="info" title="Only adults over 20 years old can register to our website and make a purchase.
+                                    The document will be required when picking up the order.">
+                                        <i class="fa fa-question-circle"></i>
+                                    </span>
+                                </label>
+                                <% const today = new Date().toISOString().slice(0, -14) %>
+                                <input type="date" name="birthday" class="form-control"
+                                       required min="1900-01-01" max=<%= today %>>
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="form-group">
                                 <label for="phone">Phone</label>
-                                <input type="text" name="phone" class="form-control" maxlength="100">
+                                <input type="text" name="phone" class="form-control"
+                                       required maxlength="12" minlength="9"
+                                       pattern="(\+\d{1,2}\s?)?1?\-?\.?\s?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}$"
+                                       title="Invalid phone number"
+                                >
                             </div>
                         </div>
                         <div class="w-100"></div>
                         <div class="col-md-10">
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <input type="email" name="email" class="form-control" maxlength="100">
+                                <input type="email" name="email" class="form-control"
+                                       required
+                                >
                             </div>
                         </div>
                         <div class="w-100"></div>
                         <div class="col-md-10">
                             <div class="form-group">
                                 <label for="address">Address</label>
-                                <input type="text" name="address" class="form-control" maxlength="100">
+                                <input type="text" name="address" class="form-control"
+                                       required maxlength="200" minlength="20"
+                                       pattern="[#.0-9a-ząčęėįšųūžA-ZĄČĘĖĮŠŲŪŽ\s,-]+$"
+                                       title="Fill in the full address with a city name"
+                                >
                             </div>
                         </div>
                         <div class="w-100"></div>
                         <div class="col-md-10">
                             <div class="form-group">
-                                <label for="new_password">Password</label>
-                                <input type="password" name="new_password" class="form-control" maxlength="100">
+                                <label for="new_password">Password
+                                    <span class="info"
+                                          title="The password must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters.">
+                                        <i class="fa fa-question-circle"></i>
+                                    </span>
+                                </label>
+                                <input id="password" type="password" name="new_password" class="form-control"
+                                       required maxlength="30" minlength="8"
+                                       pattern="(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+                                       title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
+                                >
                             </div>
                         </div>
                         <div class="col-md-10">
                             <div class="form-group">
                                 <label for="conf_password">Confirm Password</label>
-                                <input type="password" name="conf_password" class="form-control" maxlength="100">
+                                <input type="password" name="conf_password" class="form-control"
+                                       required maxlength="30" minlength="8"
+                                       title="Must match the password above"
+                                >
                             </div>
                         </div>
                     </div>
