--- a/public/views/drink.ejs
+++ b/public/views/drink.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="row">
-                    <%if(typeof drinks !== "undefined"){
+                    <%if(typeof drinks !== "undefined" && drinks.length > 0){
                     drinks.forEach(drink => { %>
                         <div class="col-md-4 d-flex">
                             <div class="product ftco-animate">
@@ -31,7 +31,10 @@
                                 </div>
                             </div>
                         </div>
-                    <% })} %>
+                    <% })} else{ %>
+                                <h3 class="text-center"> There are no products </h3>
+                            <% } %>
+
                 </div>
             </div>
 
@@ -41,8 +44,9 @@
                         <h3>Drinks Types</h3>
                         <ul class="p-0">
                             <% categories.forEach( category => {%>
-                                <li><a href="#"><%= category.name%><span class="fa fa-chevron-right"></span></a></li>
+                                <li><a href="/<%= category.name%>"><%= category.name%><span class="fa fa-chevron-right"></span></a></li>
                             <%})%>
+                                <li><a href="/">All<span class="fa fa-chevron-right"></span></a></li>
                         </ul>
                     </div>
                 </div>
