puslapiavimas, drink details

--- a/public/views/_layouts/user_nav.ejs
+++ b/public/views/_layouts/user_nav.ejs
@@ -3,7 +3,7 @@
         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-user"><%= user.name %></span></a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
             <a class="dropdown-item" href="/user">My Profile</a>
-            <a class="dropdown-item" href="/orders">My Orders</a>
+            <a class="dropdown-item" href="/orders/1">My Orders</a>
             <a class="dropdown-item" href="/user/logout">Logout</a>
         </div>
     </li>
