filtering drinks by price not finished

--- a/public/views/admin/order/rejectDetails.ejs
+++ b/public/views/admin/order/rejectDetails.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 ftco-animate">
-                <form action="/admin/order/reject/<%= order.id %>?_method=PUT" method="POST">
+                <form action="/admin/order/reject/<%= order.id %>?_method=POST" method="POST">
                     <div class="form-group">
                         <label for="detailsReject">Rejection details:</label>
                         <input value="<%= order.statusDetails %>" type="text" name="detailsReject" id="detailsReject" class="form-control">
