--- a/public/views/admin/drink/drink.ejs
+++ b/public/views/admin/drink/drink.ejs
@@ -70,6 +70,7 @@
                         <a href="/admin/drink/<%= i %>" class="btn btn-outline-info"> <%= i %> </a>
                     <% } %>
                 </div>
+                <p> <%  %> /  <%= Math.floor(pages) %> </p>
             </div>
         </div>
     </div>
