--- a/public/views/admin/order/order.ejs
+++ b/public/views/admin/order/order.ejs
@@ -76,6 +76,7 @@
                             <a href="/admin/order/<%= i %>" class="btn btn-outline-info"> <%= i %> </a>
                         <% } %>
                     </div>
+                <p> <%  %> /  <%= Math.floor(pages) %> </p>
             </div>
         </div>
     </div>
