--- a/public/views/_layouts/include_links.ejs
+++ b/public/views/_layouts/include_links.ejs
@@ -13,3 +13,4 @@
 
 <link rel="stylesheet" href="/css/flaticon.css">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/slider.css">
