--- a/public/views/_layouts/include_scripts.ejs
+++ b/public/views/_layouts/include_scripts.ejs
@@ -14,6 +14,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="/js/google-map.js"></script>
   <script src="/js/main.js"></script>
+ <script src="/js/slider.js"></script>
 
 <!--from drinks table-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>-->
