--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,6 +1,14 @@
 /* Import Google Font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+.space{
+    padding-top: 30px;
+}
+
+.filter{
+padding-top: 50px;
+}
+
 .price-input{
     width: 100%;
     display: flex;
