--- a/public/views/view.ejs
+++ b/public/views/view.ejs
@@ -14,8 +14,9 @@
                 <% if(drink.categories.length > 0){%>
                     <p>Category: <%= drink.categories[0].name %></p>
                 <%}%>
+                <p>Country: <%= drink.country %></p>
                 <p>Degree: <%= drink.degree %></p>
-
+                <p>Size: <%= drink.size %></p>
                 <p><%= drink.description %></p>
 
                 <p>
